crates/alder-can/src/snapshots/alder_can__canonicalize__tests__expression_shape_errors-2.snap
---
source: crates/alder-can/src/canonicalize.rs
expression: "can_error(\"fn duplicate() { { first: 1, first: 2 } }\")"
---
[
    Error {
        region: Region {
            start: Position {
                line: 1,
                column: 30,
            },
            end: Position {
                line: 1,
                column: 35,
            },
        },
        kind: Expr(
            DuplicateField {
                name: "first",
                first: Region {
                    start: Position {
                        line: 1,
                        column: 20,
                    },
                    end: Position {
                        line: 1,
                        column: 25,
                    },
                },
            },
        ),
    },
]
