crates/alder-can/src/snapshots/alder_can__canonicalize__tests__function_where_bound_variable_must_occur_in_signature.snap
---
source: crates/alder-can/src/canonicalize.rs
description: "trait Show[a] { fn show(value: a) -> String }\nfn bad(value: Number) where a: Show { value }\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 2,
                column: 29,
            },
            end: Position {
                line: 2,
                column: 30,
            },
        },
        kind: Type(
            UnboundVariable {
                name: "a",
            },
        ),
    },
]
