crates/alder-can/src/snapshots/alder_can__canonicalize__tests__impl_unknown_method_is_rejected.snap
---
source: crates/alder-can/src/canonicalize.rs
expression: "can_error(indoc::indoc!\n{r#\"\n            trait Show[a] { fn show(value: a) -> String }\n            impl Show[Number] {\n                fn display(value: Number) -> String { \"number\" }\n            }\n        \"#})"
---
[
    Error {
        region: Region {
            start: Position {
                line: 3,
                column: 8,
            },
            end: Position {
                line: 3,
                column: 15,
            },
        },
        kind: Type(
            UnknownImplItem {
                trait_name: "Show",
                name: "display",
                item_kind: "method",
            },
        ),
    },
]
