crates/alder-can/src/snapshots/alder_can__canonicalize__tests__impl_where_variable_must_occur_in_the_impl_head.snap
---
source: crates/alder-can/src/canonicalize.rs
expression: "can_error(indoc::indoc!\n{r#\"\n            trait Show[a] { fn show(value: a) -> String }\n            impl Show[Array[a]] where b: Show {\n                fn show(value: Array[a]) -> String { \"array\" }\n            }\n        \"#})"
---
[
    Error {
        region: Region {
            start: Position {
                line: 2,
                column: 27,
            },
            end: Position {
                line: 2,
                column: 28,
            },
        },
        kind: Type(
            UnboundVariable {
                name: "b",
            },
        ),
    },
]
