crates/alder-can/src/snapshots/alder_can__canonicalize__tests__invalid_derive_arguments_are_structured-2.snap
---
source: crates/alder-can/src/canonicalize.rs
description: "#[derive(\"Eq\")]\nenum Status { Ready }\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 1,
                column: 10,
            },
            end: Position {
                line: 1,
                column: 14,
            },
        },
        kind: Attribute(
            InvalidDerive {
                reason: "derive arguments must be trait names",
            },
        ),
    },
]
