crates/alder-can/src/snapshots/alder_can__canonicalize__tests__invalid_derive_arguments_are_structured-3.snap
---
source: crates/alder-can/src/canonicalize.rs
description: "#[derive(Eq, Eq)]\nenum Status { Ready }\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 1,
                column: 14,
            },
            end: Position {
                line: 1,
                column: 16,
            },
        },
        kind: Attribute(
            InvalidDerive {
                reason: "a derive may only be listed once",
            },
        ),
    },
]
